package biblioteca.modelo;

/**
 * Representa los posibles estados de una multa en la biblioteca.
 */
public enum EstadoMulta {
    /**
     * Indica que la multa está pendiente de pago.
     */
    PENDIENTE,

    /**
     * Indica que la multa ha sido pagada.
     */
    PAGADA
}

